Prevent x overflow

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,5 +9,7 @@
 body {
     font-family: 'Montserrat', sans-serif;
     height: 100%;
+    width: 100%;
     overflow-y: hidden;
+    overflow-x: hidden;
 }
